--- a/angular.json
+++ b/angular.json
@@ -108,6 +108,7 @@
     }
   },
   "cli": {
-    "analytics": "b6f4d1e0-d3c4-4cdc-a340-18ff4bf15bc3"
+    "analytics": "b6f4d1e0-d3c4-4cdc-a340-18ff4bf15bc3",
+    "defaultCollection": "@datorama/akita"
   }
 }
